# palette

./: LICENSE  Makefile  README.md  requirements.txt  setup.cfg
docs/: manpage.md  palette.1
examples/: bspwm-commands.json  defaults.yml  simple-example.json  simple-example.yml
libpalette/: command.py  commands_manager.py  configuration.py  connection.py  connection_handler.py  exceptions.py  keybindings_manager.py  keybindings_manager_mock.py  logger.py  rofi.py  server.py  sxhkd.py  sxhkd_process.py  utils.py
libpalette/scripts/: main.py
