[metadata]
name = commandpalette
version = 0.2.1
author = Shalev Don Meiri
author_email = sdonmeiri@gmail.com
description = A command palette for your operating system
long_deskcription = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/QazmoQwerty/palette
project_urls =
    Bug Tracker = https://github.com/QazmoQwerty/palette/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.7
scripts = 
    bin/palette
    bin/paletted
    bin/palette-rofi-script

[options.data_files]
share/man/man1 =
    docs/palette.1

[options.packages.find]
exclude =
    test*

[mypy]
python_version = 3.6
warn_unused_configs = True
warn_unused_ignores = True